<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/M_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/japan_trip"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.126" />

    <Button
        android:id="@+id/m_btn"
        android:layout_width="154dp"
        android:layout_height="79dp"
        android:text="@string/m_btnname"
        android:textSize="16sp"
        android:alpha="0.7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/M_Text"
        app:layout_constraintVertical_bias="0.136"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/m_btn1"
        android:layout_width="154dp"
        android:layout_height="79dp"
        android:text="@string/m_btnname1"
        android:textSize="16sp"
        android:alpha="0.7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/m_btn2"
        app:layout_constraintVertical_bias="0.253"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/m_btn2"
        android:layout_width="154dp"
        android:layout_height="79dp"
        android:layout_marginTop="50dp"
        android:text="@string/m_btnname2"
        android:textSize="16sp"
        android:alpha="0.7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/m_btn"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>