<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#363839"
    android:alpha="0.9"
    android:paddingHorizontal="20dp"
    android:paddingVertical="30dp">

    <ImageView
        android:id="@+id/e_img"
        android:layout_width="350dp"
        android:layout_height="185dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/todo"
        android:src="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.262"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/e_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:background="#363839"
        android:text="@string/e_txt"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e_img" />

    <TextView
        android:id="@+id/e_script"
        android:layout_width="360dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:background="#363839"
        android:text="@string/e_script"
        android:textColor="@color/white"
        android:textSize="18sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e_txt" />


</androidx.constraintlayout.widget.ConstraintLayout>